// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefboxButton shows a cyan button with KO on it 1`] = `
<button
  className="sc-bdVaJa jBNwEU"
  onClick={[Function]}
>
  KO
</button>
`;

exports[`RefboxButton shows a magenta button with P on it 1`] = `
<button
  className="sc-bdVaJa iwQbdo"
  onClick={[Function]}
>
  P
</button>
`;
